# venue_modelling

./: .gitignore  Joe Davison Project Report 1.docx  README.md
3D_modelling/: copy_to_blue.bat  copy_to_blue.sh  modelling_test  modelling_test.cpp
code/3D_modelling/: dig_1point  digest_1point.cpp  digest_alg.cpp  length  length_calc.cpp  read_file
code/dev_history/: gpu_test.cu  length_calc.cpp  read_file.cpp  test  test.cu
code/venue_modelling_frontend/: venue_modelling.js
misc/dev_history/: digest.cpp  digest_seq  modelling_test.cpp  notes.txt  overview.txt  pseudocode.txt  seq_compile.sh  sqlTest.cpp  test
misc/output_files/: brazil bigger room.vwav  brazil flat highres.vwav  brazil flat.vwav  (+1 more)
reports and research/: BL1-06  BLG-09 NFE2181 NFE2182 NHE2425 NHE2491 NIE2280 NIE2286 NIE2273 NFE2172 and CIT2310 Risk Assessment 2018-19.docx  Joe Davison Project Report 1.docx  Joe Davison Proposal.docx  todo.txt  ~$e Davison Project Report 1.docx
venue_modelling/: install.sh  nm_start.sh  node_start.sh  restart.sh  start.sh  start_digest.sh  stop.sh  uninstall.sh  venue_modelling.js
venue_modelling/digest/: CMakeLists.txt  compile.sh  digest  digest.cu  gpu_compile.sh  sequential_compile.sh
venue_modelling/digest/src/: AudioProc.cu  AudioProc.h  AudioProcParent.cu  AudioProcParent.h  AudioProcStructs.h  FileHandler.cpp  FileHandler.h  FileHandlerStructs.h  GPUKernels.cu  GPUKernels.cuh  SQLUtils.cpp  SQLUtils.h  SpatialProcParent.cu  SpatialProcParent.h  XCorrProc.cu  XCorrProcParent.cu  XCorrProcParent.h  main.cpp
venue_modelling_frontend/: send.sh
(+28 files in other folders)
